--- a/sdi-project2_a0da439c-0d8c-4097-a76a-b00478191d0a/sdi-project2.html
+++ b/sdi-project2_a0da439c-0d8c-4097-a76a-b00478191d0a/sdi-project2.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FULL NAME :: Project 2 :: SDI TERMNUMBER</title>
+    <title>Joshua Derwacter :: Project 2 :: SDI 1406</title>
     <link rel="stylesheet" href="sdi.css" type="text/css" />
     <meta charset="UTF-8">
 </head>
 <body>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
+    <h1>SDI 1406: Joshua Derwacter</h1>
     <h2>Project 2</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
+<p>For this project I will be talking about a game I used to play called Starcraft. Starcraft is a real time strategy game. I will be coding what buildings I would build first, and the time it takes for the workers to build them. I picked this game because this was the game that I would come home from school and play. Also I picked it because when I would play the game I would lose track of time while having so much fun.</p>
+</p></p>
+<p></p>
 </article>
 <footer>
-    <p>COMPLETION DATE, FULL NAME</p>
+    <p>June 12, 2014, Joshua Derwacter</p>
 </footer>
-<script type="text/javascript" src="rename-me.js"></script>
+<script type="text/javascript" src="Derwacter_Joshua_Assignment2.js"></script>
 </body>
 </html>
